--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@sequelize/core": "^7.0.0-alpha.10",
     "apollo-server": "^3.6.3",
     "class-validator": "^0.13.2",
-    "graphql": "^16.3.0",
+    "graphql": "15.3.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.17.0",
@@ -19,7 +19,6 @@
     "type-graphql": "^1.1.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
     "sequelize-typescript-migration": "^0.0.1-beta.3",
     "ts-node-dev": "^1.1.8",
