--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
   },
   "dependencies": {
     "@sequelize/core": "^7.0.0-alpha.10",
+    "@types/jest": "^27.4.1",
+    "@types/supertest": "^2.0.11",
     "apollo-server": "^3.6.3",
     "class-validator": "^0.13.2",
+    "dataloader": "^2.0.0",
     "graphql": "15.3.0",
     "mysql2": "^2.3.3",
     "reflect-metadata": "^0.1.13",
@@ -20,7 +23,10 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
+    "jest": "^27.5.1",
     "sequelize-typescript-migration": "^0.0.1-beta.3",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
   }
